--- a/app/src/main/res/xml/accessibility_systemui.xml
+++ b/app/src/main/res/xml/accessibility_systemui.xml
@@ -4,6 +4,6 @@
     android:accessibilityFeedbackType="feedbackGeneric"
     android:accessibilityFlags="flagDefault"
     android:canRetrieveWindowContent="true"
-    android:description="@string/app_name"
+    android:description="@string/description"
     android:notificationTimeout="100"
     android:packageNames="com.tencent.mm,cn.gov.lottery,com.caiyu.qqsd,com.android.systemui,com.czdx.ddcp" />
