--- a/app/src/main/res/xml/accessibility_systemui.xml
+++ b/app/src/main/res/xml/accessibility_systemui.xml
@@ -2,8 +2,11 @@
 <accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
     android:accessibilityEventTypes="typeWindowStateChanged"
     android:accessibilityFeedbackType="feedbackGeneric"
-    android:accessibilityFlags="flagDefault"
+    android:accessibilityFlags="flagReportViewIds"
     android:canRetrieveWindowContent="true"
     android:description="@string/description"
     android:notificationTimeout="100"
     android:packageNames="com.tencent.mm,cn.gov.lottery,com.caiyu.qqsd,com.android.systemui,com.czdx.ddcp" />
+
+
+    <!--android:accessibilityFlags="flagDefault"-->
